fix: added overflow-x: hidden to body

--- a/singolo.css
+++ b/singolo.css
@@ -5,6 +5,10 @@
     scroll-behavior: smooth;
 }
 
+.body {
+    overflow-x: hidden;
+}
+
 .header {
     margin: 0;
     position: fixed;
